# Playground_series

./: README.md  pyproject.toml
202605_F1_pit/: pyproject.toml
202605_F1_pit/submit_model/GBDT/catboost/: catboost_five_1.py  catboost_five_2.py  catboost_five_4.py  catboost_six_3.py
202606_Stellar_Class/: pyproject.toml
202606_Stellar_Class/eda/: eda.ipynb
submit_model/GBDT/LightGBM/: lightgbm_first.py
submit_model/GBDT/catboost/: catboost_first.py  catboost_five_3.py  catboost_four.py  catboost_second.py  catboost_seven_1.py  catboost_six_1.py  catboost_six_2.py  catboost_third.py
submit_model/ensemble/: catboost_LightGBM_first.py
submit_model/logistic/: logistic_reg_first_sub.py
