[project]
name = "202605-playground"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "mypy>=2.1.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "ruff>=0.15.14",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
